--- a/website/music/templates/music/index.html
+++ b/website/music/templates/music/index.html
@@ -1,26 +1,14 @@
-<!-- Loads the path to you wour static files -->
-{% load staticfiles %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}" />
+{% extends 'music/base.html' %}
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-
-        <!-- Logo -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'music:index' %}">Sonface</a>
-        </div>
-
-    </div>
-</nav>
-
-{% if all_albums %}
-<h3>Here are all my Albums:</h3>
-<ul>
-    {% for album in all_albums %}
-    <li><a href="{% url 'music:detail' album.id %}">{{ album.album }}</a></li>
-    {% endfor %}
-</ul>
-{% else %}
-    <h3>You don't have any albums</h3>
-{% endif %}
+{% block body %}
+    {% if all_albums %}
+    <h3>Here are all my Albums:</h3>
+    <ul>
+        {% for album in all_albums %}
+        <li><a href="{% url 'music:detail' album.id %}">{{ album.album }}</a></li>
+        {% endfor %}
+    </ul>
+    {% else %}
+        <h3>You don't have any albums</h3>
+    {% endif %}
+{% endblock %}
